main.css
@font-face { font-family: "TF2"; src: url('fonts/TF2.ttf') format('truetype'); }
@font-face { font-family: "TF2Secondary"; src: url('fonts/TF2secondary.ttf') format('truetype'); }
@font-face { font-family: "TF2Build"; src: url('fonts/tf2build.ttf') format('truetype'); }
@font-face { font-family: "Samdan"; src: url('fonts/samdan.ttf') format('truetype'); }

/* These stylizations are used by multiple pages */

html {
	scroll-behavior: smooth;
}

body {
	background-color: #3E3E3E;
	padding: 0;
	margin: 0;
	font-family: TF2Secondary;
	font-size: 15px;
}

img {
	user-select: none;
}

a {
	text-decoration: none;
	user-select: none;
}

p {
	padding: 5px;
	margin: 0 0 0.5em 0;
}

.item-card {
	border-radius: 10px;
	background-color: #24201B;
	text-align: center;
	line-height: 1.6;
	padding: 1em 0 0.5em 0;
}

.item-name {
	font-family: TF2Build;
	color: #FFD700;
	font-size: 1.2em;
	text-shadow: 2px 1px 1px #24201B;
}

.item-img {
	background-color: #3C362F;
	border-radius: 10px;
	width: 150px;
	height: 113px;
}

.item-stats {
	margin: 0.5em 7px;
}

.item-icon {
	background: none no-repeat #24201B;
	background-size: 44px;
	background-position: 7px 7px;
}
.icon-NEW { background-image: url('resources/icons/Alert.png'); }
.icon-YES { background-image: url('resources/icons/Check.png'); background-size: 32px; }
.icon-NOT { background-image: url('resources/icons/DoNot.png'); background-size: 32px; }

/* Stat colors */
.stat {
	font-family: TF2Secondary;
	font-size: 1em;
}
.upside { color: #99CCFF; }
.downside { color: #FF4040; }
.neutral { color: #EBE2CA; }
.subtle { color: #756B5E; }
.credits { color: #7AC437; }
.consumable { color: #00A000; }
.limited { color: yellow; }
.item-set-active { color: #E1FF0F; }
.item-set-inactive { color: #95AF0C; }

/* Item Quality colors */
.q-stock { color: #B2B2B2; }
.q-unique { color: #FFD700; }
.q-vintage { color: #476291; }
.q-genuine { color: #4D7455; }
.q-strange { color: #CF6A32; }
.q-unusual { color: #8650AC; }
.q-haunted { color: #38F3AB; }
.q-collectors { color: #AA0000; }
.q-community { color: #70B04A; }
.q-valve { color: #A50F79; }

/* Item Grade colors */
.g-civilian { color: #B0C3D9; }
.g-freelance { color: #5E98D9; }
.g-mercenary { color: #4B69FF; }
.g-commando { color: #8847FF; }
.g-assassin { color: #D32CE6; }
.g-elite { color: #EB4B4B; }

/* Paint Can colors */
.p-australium { color: #E7B53B; }
.p-mannco { color: #CF7336; }
.p-moustache { color: #7E7E7E; }
.p-zepheniah { color: #424F3B; }

/* Achievement Colors (Background) */
.a-grey-dark { background-color: #3E3E3E; }
.a-grey { background-color: #9A9280; }
.a-white { background-color: #F5E5C1; }
.a-orange { background-color: #F4772B; }
.a-orange-dark { background-color: #B46032; }

/* Changes stat icons */
.nochange {
	background: url('resources/icons/Pictogram_check.png') no-repeat;
	background-size: 16px;
	padding-left: 20px;
}
.modified {
	background: url('resources/icons/Pictogram_neutral.png') no-repeat;
	background-size: 16px;
	padding-left: 20px;
}
.added {
	background: url('resources/icons/Pictogram_plus.png') no-repeat;
	background-size: 16px;
	padding-left: 20px;
}
.removed {
	background: url('resources/icons/Pictogram_minus.png') no-repeat;
	background-size: 16px;
	padding-left: 20px;
}
.info {
	background: url('resources/icons/Pictogram_info.png') no-repeat;
	background-size: 16px;
	padding-left: 20px;
}
.proposal {
	background: url('resources/icons/Pictogram_question.png') no-repeat;
	background-size: 16px;
	padding-left: 20px;
}
.wip {
	background: url('resources/icons/Work-In-Progress.png') no-repeat;
	background-size: 16px;
	padding-left: 20px;
}
.warning-blue {
	background: url('resources/icons/Pictogram_warning-blue.png') no-repeat;
	background-size: 20px;
	background-position-y: -3px;
	padding-left: 20px;
}
.warning-red {
	background: url('resources/icons/Pictogram_warning-red.png') no-repeat;
	background-size: 20px;
	background-position-y: -3px;
	padding-left: 20px;
}
.warning-yellow {
	background: url('resources/icons/Pictogram_warning-yellow.png') no-repeat;
	background-size: 20px;
	background-position-y: -3px;
	padding-left: 20px;
}

.tooltip {
	cursor: help;
	border-bottom: 1px dotted;
}
label {
	cursor: pointer !important;
}

.tooltip-link {
	cursor: pointer;
	border-bottom: 1px dotted;
	color: inherit;
	user-select: text;
}
.tooltip-link:hover { color: #FFD700; }

#back-to-top-panel {
	position: fixed;
	padding: 0.05vw;
	background-color: #222222;
	bottom: 0;
	left: 5px;
	border-radius: 10px 10px 0 0;
}

.nav-btn {
	width: fit-content;
	height: fit-content;
	background-color: #F5E5C1;
	box-shadow: #9A9280 -3px -3px inset;
	color: #141414;
	font-family: TF2Build;
	font-size: 2em;
	line-height: 1.6;
	border-radius: 10px;
	padding: 10px;
	margin: 10px 0px;
	user-select: none;
	cursor: pointer;
	z-index: 2;
}
.nav-btn:hover {
	background-color: #F4722B;
	box-shadow: #B46032 3px 3px inset;
}
.nav-btn.disabled {
	background-color: #776b5f;
	box-shadow: none;
	cursor: not-allowed;
	color: #2d2425;
}
.img-nav-btn {
	float: left;
	width: 2rem;
	height: 2rem;
	padding: 0;
	margin: 5px;
	background: none no-repeat #F5E5C1;
	background-size: 20px;
	background-position: center center;
	box-shadow: #9A9280 -2px -2px inset;
}
.img-nav-btn:hover  {
	box-shadow: #B46032 2px 2px inset;
}

/* Navigation Button Types */
.nav-menu {
	background-image: url('resources/icons/Nav_Menu.png');
	margin-right: 0px;
}
.nav-top {
	background-image: url('resources/icons/Nav_Top.png');
	width: 4.5rem;
}

/* Bad Weapon Rebailitation overrides */
.bwr {
	background: url('resources/icons/Credit_BWR.png') no-repeat;
	background-size: 16px;
	padding-left: 20px;
}

.tf2c {
	background: url('resources/icons/Credit_TF2C.png') no-repeat;
	background-size: 16px;
	padding-left: 20px;
}

.frontline {
	background: url('resources/icons/Credit_Frontline.png') no-repeat;
	background-size: 16px;
	padding-left: 20px;
}

@media (max-width: 1200px) {
	body {
		font-size: 24px; /* Increase the base font size for readability (font-sizes use em to scale proportionally) */
	}

	#back-to-top-panel {
		display: none;
	}

	.nav-btn {
		font-size: 2.5rem;
	}

	.item-card {
		width: calc(50% - 0.5rem);
		margin: 0.25rem;
		align-content: center;
	}

	.item-img {
		width: 50%;
		height: auto;
	}

	.nochange, .modified, .added, .removed, .info, .proposal, .wip, .warning-blue, .warning-red, .warning-yellow, .bwr, .tf2c, .frontline {
		padding-left: 1.8rem;
		background-size: 1.5rem;
		background-position-y: 0rem;
	}
}

